# vstabs

./: .gitignore  BUILD.md  LICENSE  README.md
docs/: design.md
docs/blog-drafts/: 2026-04-26-vstabs-spike-journey.md
docs/decisions/: 2026-04-26-reparent-rejected.md  2026-04-26-spawn-and-track-ownership.md  2026-04-28-code-server-rejected.md  2026-04-30-code-server-revived.md
docs/journal/: 2026-04-30-prior-art-deep-dive.md
docs/mockups/: v0.2-a-add-project.html
prototype/: README.md  vstabs.ahk
spike/borderless/: Cargo.toml  README.md
spike/borderless/src/: main.rs
spike/reparent/: Cargo.toml  README.md
spike/reparent/src/: main.rs
spike/sibling-slave/: Cargo.toml  README.md
spike/sibling-slave/src/: main.rs
spike/v0.1-iframe-tab/: .gitignore  README.md  index.html  projects.js  start-code-servers.sh  stop-code-servers.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  registry.rs  servers.rs  sysinfo.rs
ui/: app.js  index.html  projects.js  styles.css
