[package]
name = "vstabs"
version = "0.1.0"
edition = "2021"
description = "L1 project tab bar for desktop VS Code (local / WSL / SSH)"
license = "BSD-3-Clause"
repository = "https://github.com/jun0-ds/vstabs"

[lib]
name = "vstabs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "macros", "rt-multi-thread", "sync", "net"] }
thiserror = "1"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
